--- a/package.json
+++ b/package.json
@@ -9,7 +9,15 @@
     "electron:build": "vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
-    "postuninstall": "electron-builder install-app-deps"
+    "postuninstall": "electron-builder install-app-deps",
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder"
+  },
+  "build": {
+    "appId": "com.dolinsek.elias.screenbreakjs",
+    "mac": {
+      "category": "public.app-category.utilities"
+    }
   },
   "main": "background.js",
   "dependencies": {
