--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "screenbreakjs",
-  "description": "Reminder to make screen breaks",
+  "description": "Reminder to take screen breaks",
   "version": "0.1.0",
   "private": true,
   "author": {
